--- a/Dav Second Brain V1.2/.obsidian/app.json
+++ b/Dav Second Brain V1.2/.obsidian/app.json
@@ -1,14 +1,14 @@
 {
   "alwaysUpdateLinks": true,
   "pdfExportSettings": {
-    "includeName": true,
+    "includeName": false,
     "pageSize": "A4",
     "landscape": false,
     "margin": "2",
-    "downscalePercent": 60
+    "downscalePercent": 62
   },
   "userIgnoreFilters": [
     "Home/Daily Notes/"
   ],
-  "vimMode": true
+  "vimMode": false
 }
