--- a/.obsidian/app.json
+++ b/.obsidian/app.json
@@ -1,4 +1,10 @@
 {
   "spellcheck": true,
-  "alwaysUpdateLinks": true
+  "alwaysUpdateLinks": true,
+  "pdfExportSettings": {
+    "pageSize": "Letter",
+    "landscape": false,
+    "margin": "0",
+    "downscalePercent": 80
+  }
 }
