--- a/.obsidian/app.json
+++ b/.obsidian/app.json
@@ -2,9 +2,10 @@
   "spellcheck": true,
   "alwaysUpdateLinks": true,
   "pdfExportSettings": {
+    "includeName": true,
     "pageSize": "Letter",
     "landscape": false,
     "margin": "0",
-    "downscalePercent": 80
+    "downscalePercent": 70
   }
 }
