psuhettino pre-disastro
ora sposto la cartella di clonazione di DavSecondBrain nella cartella icloud, per averlo sempre sincronizzato

--- a/.obsidian/appearance.json
+++ b/.obsidian/appearance.json
@@ -1,4 +1,12 @@
 {
-  "accentColor": "",
-  "theme": "obsidian"
+  "accentColor": "#acd651",
+  "theme": "obsidian",
+  "cssTheme": "",
+  "showViewHeader": true,
+  "translucency": false,
+  "monospaceFontFamily": "Menlo",
+  "enabledCssSnippets": [
+    "snippet"
+  ],
+  "showRibbon": false
 }
